--- a/package.json
+++ b/package.json
@@ -1,32 +1,62 @@
 {
   "name": "montehiking",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
+  "scripts": {
+    "build": "react-scripts build",
+    "build:po": "po-extract --outExt=.ts --outDir=./src/i18n/dictionaries",
+    "build:storybook": "build-storybook -s public",
+    "watch": "react-scripts start",
+    "watch:po": "po-extract --outExt=.ts --outDir=./src/i18n/dictionaries --watch",
+    "watch:storybook": "start-storybook -p 6006 -s public",
+    "test": "react-scripts test",
+    "lint": "eslint . --ext .ts,.tsx",
+    "prettier": "prettier --check ./"
+  },
   "dependencies": {
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/builder-webpack5": "^6.4.19",
+    "@storybook/manager-webpack5": "^6.4.19",
+    "@storybook/node-logger": "^6.4.19",
+    "@storybook/preset-create-react-app": "^4.0.1",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "^0.0.9",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@trivago/prettier-plugin-sort-imports": "^3.1.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "antd": "^4.10.2",
+    "classnames": "^2.3.1",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-storybook": "^0.5.7",
+    "husky": "^4.3.0",
+    "po-extract": "^1.0.1",
+    "prettier": "^2.3.1",
+    "pretty-quick": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intl": "^5.10.14",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
+    "typescript-plugin-css-modules": "^3.2.0",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -39,5 +69,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
+  "engines": {
+    "node": "14.*",
+    "yarn": "1.22.*"
   }
 }
