--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,14 @@
     "moduleResolution": "node",
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "es5",
+    "target": "es5"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src/**/*", "typings/**/*"],
+  "exclude": ["node_modules"]
 }
