--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "watch": "react-scripts start",
     "watch:po": "po-extract --outExt=.ts --outDir=./src/i18n/dictionaries --watch",
     "watch:storybook": "start-storybook -p 6006 -s public",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "lint": "eslint . --ext .ts,.tsx",
     "prettier": "prettier --check ./"
@@ -46,6 +47,7 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-storybook": "^0.5.7",
+    "gh-pages": "^3.2.3",
     "husky": "^4.3.0",
     "po-extract": "^1.0.1",
     "prettier": "^2.3.1",
