--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "watch:storybook": "start-storybook -p 6006 -s public",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
+    "test": "NODE_ENV=test react-scripts test",
     "lint": "eslint . --ext .ts,.tsx",
     "prettier": "prettier --check ./"
   },
