--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/google.maps": "^3.48.5",
     "@types/jest": "^27.4.1",
+    "@types/leaflet": "^1.7.9",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.44",
     "@types/react-dom": "^18.0.0",
@@ -57,12 +58,14 @@
     "eslint-plugin-prettier": "^4.0.0",
     "gh-pages": "^3.2.3",
     "husky": "^4.3.0",
+    "leaflet": "^1.7.1",
     "po-extract": "^1.0.1",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-intl": "^5.24.8",
+    "react-leaflet": "^4.0.0-beta.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
     "typescript-plugin-css-modules": "^3.4.0",
