--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "gh-pages": "^3.2.3",
     "husky": "^4.3.0",
-    "leaflet": "^1.7.1",
+    "leaflet": "^1.8.0-beta.3",
     "po-extract": "^1.0.1",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
