--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^14.0.4",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jest": "^27.4.1",
     "@types/leaflet": "^1.7.9",
     "@types/node": "^16.11.26",
@@ -54,8 +55,10 @@
     "classnames": "^2.3.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "file-saver": "^2.0.5",
     "gh-pages": "^3.2.3",
     "husky": "^4.3.0",
+    "jszip": "^3.9.1",
     "leaflet": "^1.8.0-beta.3",
     "po-extract": "^1.0.1",
     "prettier": "^2.6.2",
@@ -65,6 +68,7 @@
     "react-intl": "^5.24.8",
     "react-leaflet": "^4.0.0-beta.0",
     "react-scripts": "5.0.0",
+    "tokml": "^0.4.0",
     "typescript": "^4.6.3",
     "typescript-plugin-css-modules": "^3.4.0",
     "web-vitals": "^2.1.4",
