--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "private": false,
   "scripts": {
     "build": "react-scripts build",
-    "build:po": "po-extract --outExt=.ts --outDir=./src/i18n/dictionaries",
+    "build:po": "po-extract --outExt=.ts --outDir=./src/i18n/dictionaries --fixPo",
     "build:storybook": "build-storybook -s public",
     "watch": "react-scripts start",
-    "watch:po": "po-extract --outExt=.ts --outDir=./src/i18n/dictionaries --watch",
+    "watch:po": "po-extract --outExt=.ts --outDir=./src/i18n/dictionaries --watch --fixPo",
     "watch:storybook": "start-storybook -p 6006 -s public",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
@@ -60,7 +60,7 @@
     "husky": "^4.3.0",
     "jszip": "^3.9.1",
     "leaflet": "^1.8.0-beta.3",
-    "po-extract": "^1.0.1",
+    "po-extract": "^1.1.1",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
     "react": "^18.0.0",
