--- a/package.json
+++ b/package.json
@@ -57,16 +57,17 @@
     "eslint-plugin-prettier": "^4.0.0",
     "file-saver": "^2.0.5",
     "gh-pages": "^3.2.3",
+    "history": "^5.3.0",
     "husky": "^4.3.0",
     "jszip": "^3.9.1",
-    "leaflet": "^1.8.0-beta.3",
+    "leaflet": "^1.8.0",
     "po-extract": "^1.1.1",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-intl": "^5.24.8",
-    "react-leaflet": "^4.0.0-beta.0",
+    "react-leaflet": "^4.0.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
     "typescript-plugin-css-modules": "^3.4.0",
